--- a/pom.xml
+++ b/pom.xml
@@ -18,12 +18,27 @@
 <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api/5.13.0 -->
 
     <dependencies>
+    <!-- 3 DEPENDECIAS IMPORTADAS DONT FORGET!!!!! MDFKKKKK -->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
             <version>5.13.0</version>
             <scope>test</scope>
         </dependency>
+                <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>2.0.15</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/ch.qos.logback/logback-classic -->
+    <dependency>
+        <groupId>ch.qos.logback</groupId>
+        <artifactId>logback-classic</artifactId>
+        <version>1.5.18</version>
+        <scope>compile</scope>
+    </dependency>
+
     </dependencies>
 
 
