--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,24 @@
         <scope>compile</scope>
     </dependency>
 
+<!-- Jackson: lectura/escritura JSON -->
+ <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
+<dependency>
+    <groupId>com.fasterxml.jackson.core</groupId>
+    <artifactId>jackson-databind</artifactId>
+    <version>2.20.0</version>
+</dependency>
+
+
+<!-- SLF4J: logging simple a consola -->
+<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-simple -->
+<dependency>
+    <groupId>org.slf4j</groupId>
+    <artifactId>slf4j-simple</artifactId>
+    <version>2.0.14</version>
+    <scope>test</scope>
+</dependency>
+
     </dependencies>
 
 
