--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,9 @@ target/
 # Dependencias de Maven (locales)
 .mvn/
 
+# Datos en runtime (gitignored)
+orders.json
+
 # Directorios de configuraciones específicas del IDE
 .vscode/
 .idea/
@@ -18,6 +21,10 @@ target/
 .vscode/settings.json
 .vscode/tasks.json
 .vscode/launch.json
+
+# Archivo de datos (cambios en runtime - no versionado)
+orders.json
+data/
 
 # Archivos de configuración de Maven
 pom.xml.tag
